--- a/posts/software/aws/aws_saa_notes.qmd
+++ b/posts/software/aws/aws_saa_notes.qmd
@@ -1,7 +1,7 @@
 ---
 title: "AWS Solutions Architect"
-description: "Head in the Clouds"
-date: "2025-07-18"
+description: "Cloud Strife"
+date: "2025-09-24"
 # image: "deep_learning_model.png"
 categories: [DataEngineering, Engineering, Software]
 ---
@@ -3612,7 +3612,7 @@ A pre-configured Amazon Linux AMI is available for NAT instances, although it ha
 ![NAT Instances](nat_instance.png)
 
 
-### 23.3.2. NAT Gateway
+### 24.3.2. NAT Gateway
 
 **NAT Gateway is an AWS-managed NAT instance** with higher bandwidth, availability and no admin required. You pay per hour and per bandwidth. 
 
@@ -3623,8 +3623,8 @@ We need multiple NATs in each AZ for fault tolerance.
 ![NAT Gateway](nat_gateway.png)
 
 
-## 23.4. Security Groups and Network ACL
-### 23.4.1. Overview
+## 24.4. Security Groups and Network ACL
+### 24.4.1. Overview
 
 **A Network ACL sits before the subnet to handle incoming requests according to inbound rules**. It is **like a firewall** which controls traffic to and from subnets. 
 
@@ -3652,7 +3652,7 @@ Comparison table:
 ![Security Group vs NACL Table](security_group_vs_nacl_table.png)
 
 
-### 23.4.2. Default NACL
+### 24.4.2. Default NACL
 The default allows everything inbound and outbound for its associated subnets. 
 
 It is best practice to not modify the default NACL and instead create a custom NACL. 
@@ -3667,7 +3667,7 @@ For any two endpoints to establish a connection, they must use ports. Clients co
 Ephemeral ports are important to consider when dealing with NACLs because we need to configure the rules to allow inbound/outbound requests on the appropriate port range. 
 
 
-## 23.5. VPC Peering
+## 24.5. VPC Peering
 
 VPC peering is for when we want to **privately connect two VPCs using AWS’s private network**, to make them behave as if they were one network.
 
@@ -3683,7 +3683,7 @@ VPC peering can be set up across different AWS accounts and regions.
 When peering across accounts in the same region, you can reference a security group which is convenient as you do not have to reference the CIDR. 
 
 
-## 23.6. VPC Endpoints 
+## 24.6. VPC Endpoints 
 
 When you want to **expose AWS resources that are within your VPC to the public internet**. 
 
@@ -3704,7 +3704,7 @@ There are two types of endpoint:
 Gateway is generally preferred for S3 and DynamoDB because it is free and easier to set up. The exception is when you want access from on premises or another region or VPC within AWS, in which case an Interface Endpoint is required. 
 
 
-## 23.7. VPC Flow Logs
+## 24.7. VPC Flow Logs
 
 **Capture information about IP traffic going into your interfaces**: VPC Flow Logs, Subnet Flow Logs, ENI Flow Logs. They also capture information from AWS-managed interfaces like ELB, RDS, etc. 
 
@@ -3722,8 +3722,8 @@ Common architectures:
 ![VPC Flow Logs Architectures](vpc_flow_logs_architectures.png)
 
 
-## 23.8. AWS Site-to-Site VPN
-### 23.8.1. Overview
+## 24.8. AWS Site-to-Site VPN
+### 24.8.1. Overview
 We might want to **connect our corporate data centre to our VPC**. 
 
 They need a Virtual Private Gateway (VGW) on the AWS side of the connection, and a Customer Gateway (CGW) which is a software or physical device on the customer side of the connection. 
@@ -3734,15 +3734,15 @@ You need to enable route propagation for the VGW in the route table.
 If you need to ping the EC2 instances from in premises, the inbound rule of the security group must allow ICMP protocol. 
 
 
-### 23.8.2. AWS VPN CloudHub
+### 24.8.2. AWS VPN CloudHub
 
 This provides secure **communication between multiple on premises sites and the VPC**; “hub and spoke model” with AWS as the hub. 
 
 ![AWS VPN CloudHub](aws_vpn_cloudhub.png)
 
 
-## 23.9. Direct Connect (DX)
-### 23.9.1. Overview
+## 24.9. Direct Connect (DX)
+### 24.9.1. Overview
 DX provides a dedicated **private** connection from a remote network to your VPC. This allows you to access public resources (e.g. S3) and private resources (e.g. EC2) on the same connection. 
 
 The benefits are increased bandwidth and more stable connection. 
@@ -3755,7 +3755,7 @@ You need to set up a VGW on your VPC.
 Connections can be dedicated connections or hosted connections. The lead time to set up DX can be >1 month. 
 
 
-### 23.9.2. Encryption
+### 24.9.2. Encryption
 Data in transit is not encrypted but is private by virtue of being on a private connection. 
 
 You can set up encryption yourself. 
@@ -3763,7 +3763,7 @@ You can set up encryption yourself.
 ![Direct Connect Encryption](direct_connect_encryption.png)
 
 
-### 23.9.3. Resiliency 
+### 24.9.3. Resiliency 
 
 One option for improved resiliency is to set up *multiple Direct Connect connections*. 
 
@@ -3772,21 +3772,21 @@ An even more resilient option is to have **multiple DX locations**, each with mu
 ![Direct Connect Resiliency](direct_connect_resiliency.png)
 
 
-### 23.9.4. Direct Connect Gateway
+### 24.9.4. Direct Connect Gateway
 
 If you want to set up a Direct Connect to **multiple VPCs in different regions** (within the same account) use Direct Connect Gateway. 
 
 ![Direct Connect Gateway](direct_connect_gateway.png)
 
 
-### 23.9.5. DX + Site-to-Site VPN
+### 24.9.5. DX + Site-to-Site VPN
 
 Having multiple DX connections is expensive, so a common architecture is to use Site-to-Site VPN as a backup connection if the DX connection goes down. 
 
 ![Site-to-Site VPN as a Backup to DX](dx_backup_site_to_site_vpn.png)
 
 
-## 23.10. Transit Gateway
+## 24.10. Transit Gateway
 
 The network topology can get complicated. Transit Gateway helps to solve this. 
 You **create route tables to limit which VPCs can talk to other VPCs**. 
@@ -3800,14 +3800,14 @@ This creates multiple paths to allow a routing strategy to forward a packet over
 You can **share DX connections between multiple accounts**. 
 
 
-## 23.11. VPC Traffic Mirroring
+## 24.11. VPC Traffic Mirroring
 
 **Capture and inspect network traffic through your VPC**. 
 We capture from a source ENI to a target ENI/load balancer. 
 
 
-## 23.12. IPv6 for VPC
-### 23.12.1. Overview
+## 24.12. IPv6 for VPC
+### 24.12.1. Overview
 IPv4 maxes out at 4.3 billion addresses - these will be exhausted soon. 
 
 IPv6 can provide 3.4x10^38 unique IP addresses. 
@@ -3815,14 +3815,14 @@ IPv6 can provide 3.4x10^38 unique IP addresses.
 Every IPv6 address **in AWS** is public and Internet-routable. You can enable them to run in dual-stack mode to be private and connect via Internet Gateway. 
 
 
-### 23.12.2. Egress-only Internet Gateway
+### 24.12.2. Egress-only Internet Gateway
 
 These are only for IPv6 and are similar to NAT gateway. They allow instances in your VPC to have outbound IPv6 connections when preventing inbound IPv6 instances. 
 
 You must update route tables to allow this. 
 
 
-## 23.13. AWS Network Firewall 
+## 24.13. AWS Network Firewall 
 
 We’ve already seen the following methods to secure the network on AWS: NACL, VPC security groups, AWS WAF, AWS Shield, AWS Firewall Manager
 
@@ -3839,6 +3839,353 @@ It allows for fine-grained control on:
 - Regex pattern matching 
 
 We can either allow, drop or alert when these rules are matched. These matches can be sent to S3, CloudWatch Logs, Kinesis Data Firehose. 
+
+
+# 25. Disaster Recovery and Migrations 
+
+## 25.1. Disaster Recovery Overview
+
+We can do different types of disaster recovery:
+
+- On-premises to on premises - traditional DR
+- On-premises to cloud - hybrid DR
+- Cloud region A to cloud region B - cloud DR
+
+
+**Recovery Point Objective (RPO) is how much data you lose**, and is determined by how often you run backups. The time between backups determines how much data is lost in a disaster. 
+
+**Recovery Time Objective (RTO) is the time taken to recover** from the disaster once it has happened, ie the downtime. 
+
+![RPO and RTO](rto_rpo.png)
+
+
+There are several disaster recovery strategies. In order from slowest to fastest RTO:
+
+1. **Backup and restore**. Periodically save to S3 or save snapshots for EBS, Redshift and RDS. 
+2. **Pilot light**. A small version of the app is always running in the cloud; this is the critical core AKA the pilot light. This is faster to restore as critical systems are already running. E.g. we might just have the RDS database running but not any EC2 instances. 
+3. **Warm standby**. The *full system* is up and running but at minimum size, ready to be scaled up in the event of a disaster. 
+4. **Hot site / multi-site approach**. Full production scale is running on AWS in parallel to the on premises version. If fully in cloud, this would be replicating across multiple regions. 
+
+
+## 25.2. Disaster Recovery - Practical Tips
+
+- **Backups**. EBS snapshots, RDS automated backups. Push to S3 and use lifecycle policies to move to glacier. Snowball or Storage Gateway to move data from on premises to the cloud. 
+- High **availability**. Route53 can migrate DNS from one region to another. Multi-AZ architecture for services like RDS, ElastiCache, EFS, S3. Direct connection can fall back to site-to-site VPN.
+- **Replication**. Replicate RDS across regions or use Aurora + Global Database. 
+- **Automation**. CloudFormation and Elastic Beanstalk can recreate entire environments quickly. Recover or reboot EC2 instances based on CloudWatch alarms. 
+- **Chaos**. Test DR readiness by simulating a disaster. Netflix has the idea of a chaos monkey, e.g. terminate EC2 instances randomly in production. 
+
+
+## 25.3. Database Migration Service (DMS)
+### 25.3.1 Overview
+**DMS helps you migrate a database from a source to a target**, e.g. premises to the cloud. The source database remains available. It supports continuous data replication using Change Data Capture (CDC). You create an EC2 instance to perform the replication task. 
+
+Migrations can be:
+
+- Homogeneous e.g. Oracle to Oracle
+- Heterogeneous e.g. Microsoft SQL Server to Aurora
+
+![DMS](dms.png)
+
+
+Sources can be:
+
+- On-premises 
+- EC2 instance databases
+- Azure
+- RDS and Aurora
+- S3
+- DocumentDB
+
+
+Targets can be:
+
+- On-premises
+- EC2 instances 
+- RDS
+- Redshift, DynamoDB
+- OpenSearch service
+- Kinesis Data Streams
+- Apache Kafka
+- Document DB (and Amazon Neptune)
+- Redis and Babelfish
+
+
+### 25.3.2. AWS Schema Conversion Tool (SCT)
+
+SCT is a tool to **convert your database’s schema from one engine to another**. For example, `Oracle -> PostgreSQL`. 
+
+You don’t need SCT if you are migrating between databases that use the same engine, e.g. `on-premises PostgreSQL -> RDS PostgreSQL`.
+
+
+### 25.3.3. Continuous Replication
+
+![DMS Continuous Replication](dms_continuous_replication.png)
+
+
+### 25.3.4. Multi-AZ Deployment
+
+When enabled, DMS provisions a replica in a different AZ and keeps it in sync. 
+
+![DMS Multi-AZ Deployment](dms_multi_az.png)
+
+
+### 25.3.5. RDS and Aurora MySQL Migrations
+
+This is a specific example/gotcha when using DMS. 
+If we want to migrate RDS MySQL to Aurora MySQL, we have several options:
+
+1. Take RDS snapshots and restore them as Aurora DB
+2. Create an Aurora read replica from RDS, and eventually promote it as its own cluster once fully copied. 
+3. Use Percona XtraBackup to create a backup dump in S3 and create an Aurora database from this
+4. Use the mysqldump utility to migrate MySQL to Aurora. 
+5. Use DMS if both databases are running to do continuous replication. 
+
+
+The same options apply to PostgreSQL migrations. 
+
+
+## 25.4. On-Premises Strategy with AWS
+
+You can download the Amazon Linux 2 AMI as a `.iso` file to run locally as a VM. 
+
+VM Import/Export allows you to migrate existing applications to EC2, create a DR plan for your on-premises VMs and export the VM back. 
+
+AWS Application Discovery Service gathers information about your on premises servers to help plan a migration. It tracks server utilisation, dependency mappings, etc and can be viewed in AWS Migration Hub. 
+
+DMS can then be used to do the database migration. 
+
+AWS Server Migration Service (SMS) incrementally replicates on premises servers to AWS. The equivalent of DMS but for servers instead of databases. 
+
+
+## 25.5. AWS Backup
+
+**A fully managed service to centrally manage and automate backups across AWS services**: EC2 / EBS, S3, RDS, Aurora, DynamoDB, DocumentDB / Neptune, EFS, Storage Gateway. 
+It backs up everything to an internal S3 bucket specific to AWS Backup. 
+
+It supports cross-region backups and cross-account backups. This is helpful for DR. 
+
+It supports PITR for supported services. Backups can be on-demand or scheduled. 
+You create tag-based backup policies called Backup Plans, specifying the frequency, window, transition lifecycle to cold storage, retention period, etc.
+
+![AWS Backup](aws_backup.png)
+
+**AWS Backup Vault Lock** enforces a Write Once Read Many (WORM) state. It ensures that backups cannot be deleted, even by the root user. 
+
+
+## 25.6. AWS Migration Service (MGN)
+### 25.6.1. AWS Application Discovery Service
+**AWS Application Discovery Service gathers information about your on-premises servers to help plan a migration**. It tracks server utilisation, dependency mappings, etc and can be viewed in AWS Migration Hub.
+
+
+There are two types of discovery:
+
+- Agentless Discovery. Gives performance history like CPU utilisation, memory usage, disk usage. 
+- Agent-based Discovery. Gives more details about system configuration, running processes, network connections, etc. 
+
+
+### 25.6.2. AWS Migration Service
+AWS Migration Service (MGN) does the actual migration. It can lift and shift physical, virtual and cloud-based servers to run natively on AWS. 
+
+![AWS MGN](aws_mgn.png)
+
+
+### 25.6.3. Transfer Large Amounts of Data into AWS
+
+This is a refresher/recap of services already covered. 
+
+There are several options:
+
+- Site-to-Site VPN. Transfer data over the Internet. Immediate to setup but limited by your bandwidth. 
+- Direct Connect. Initial set up takes about 1 month but bandwidth is generally higher and connection is more stable. 
+- Snowball. Takes about 1 week for the Snowball to be delivered, but the transfer itself is fast since it’s local. Can be combined with DMS. 
+
+For ongoing replication / transfers we can use Site-to-Site VPN or DX. 
+
+
+### 25.6.4 VMWare Cloud on AWS 
+
+People who manage on premises data centres often use VMWare Cloud. They may want to extend the data centre to AWS but keep using VMWare Cloud to manage it all. 
+
+![VMWare Cloud](vmware_cloud.png)
+
+
+# 26. More Solution Architectures
+
+## 26.1. Event Processing
+
+Using SNS, SQS, Lambda
+
+![Event Processing with SNS, SQS, Lambda](event_architecture_sqs.png)
+
+
+Fan out pattern. Rather than having the application sending directly to each consumer (Option 1), which requires a code change for each new/modified consumer, we can publish to an SNS topic and fan out (Option 2)
+
+![Event Architecture Fan Out](event_architecture_fan_out.png)
+
+S3 Event Notifications. Use this to react to changes in an S3 bucket, e.g. a user uploading a video. 
+
+![Event Architecture S3 Events](event_architecture_s3_events.png)
+
+We can also do this via EventBridge. The benefit of EventBridge is it allows for more advanced filtering options, fanning out to multiple destinations, archive and replay events. 
+
+![Event Architecture EventBridge](event_architecture_eventbridge.png)
+
+
+
+## 26.2. Caching Strategies
+We can cache at different stages of the pipelines, with trade offs in latency vs potential staleness. 
+
+S3 has no caching option. 
+
+![Caching Architecture](caching_architecture.png)
+
+
+## 26.3. Blocking an IP Address
+
+- CloudFront. Geo restrictions and other filtering options. 
+- NACL. Deny and allow rules. 
+- ALB. Can manage security in the ALB. 
+- WAF with ALB or CloudFront. Set IP address filtering. 
+- Security group on EC2 instance. Allow rules. 
+- Firewall running on the EC2 instance
+
+![Blocking an IP Address Architecture - ALB, CF, WAF](blocking_an_ip_architecture.png)
+
+
+## 26.4. High Performance Computing
+
+A summary of services that are useful for HPC. 
+
+Data management and transfer: 
+
+- DX
+- Snowball
+- DataSync
+
+
+Compute and networking: 
+
+- EC2 instances (CPU- or GPU-optimised)
+- EC2 Placement Groups (cluster type) for low latency networking
+- EC2 Enhanced Networking. Higher bandwidth and lower latency. Use Elastic Network Adapter (ENA). Elastic Fabric Adapter (EFA) is an improved ENA for tightly coupled workloads on Linux, and uses Message Passing Interface (MPI) to bypass the Linux OS. 
+
+
+Storage:
+
+- Instance-attached storage. EBS or Instance Store
+- Network storage. S3, EFS, FSx for Lustre. 
+
+
+Automation and orchestration:
+
+- AWS Batch. Supports multi-node parallel jobs, where a single job can span multiple EC2 instances. 
+- AWS ParallelCluster. Open-source cluster management tool to deploy HPC on AWS. You can enable EFA on the cluster. 
+
+
+## 26.5. Creating a Highly Available EC2 Instance
+
+An EC2 instance launches in a specific AZ so isn’t highly available by default. But we can create architectures that improve availability. 
+
+We can have an EC2 instance with an Elastic IP. When the instance fails, a CloudWatch Alarm triggers a Lambda function which starts a backup instance (if not already running) and attaches the Elastic IP to this new instance. 
+
+![Highly Available EC2 Instance](highly_available_ec2.png)
+
+Another option is to use an auto scaling group (ASG). We can configure the ASG to specify 1 min, 1 max, 1 desired, >=2 AZ. This will create a new instance in a different AZ when the first instance goes down.  EC2 User Data attaches the Elastic IP based on a tag; this requires an EC2 instance role with permissions to attach an Elastic IP. 
+
+![Highly Available EC2 Instance - ASG](highly_available_ec2_asg.png)
+
+We can extend this to have an EBS as well as an ASG. The EBS volume exists only in one AZ, so when we create our backup EC2 instance in a new AZ we need to move the EBS volume too. We can do this with a **lifecycle hook**; on ASG termination, the lifecycle hook can take an EBS Snapshot with appropriate tags. Then we can have an ASG launch lifecycle hook to create a new EBS volume from the snapshot and attach it to our new instance. 
+
+![Highly Available EC2 Instance - ASG + EBS](highly_available_ec2_ebs.png)
+
+
+# 27. Other Services
+
+This section is a high level overview of miscellaneous AWS services that are less commonly used. 
+
+
+## 27.1. CloudFormation
+### 27.1.1. Overview
+CloudFormation is used to **deploy and manage infrastructure at scale**. It is a declarative way to define your AWS infrastructure for any resources. CloudFormation will create the resources *in the right order* using your config. 
+
+Benefits:
+
+- **Infrastructure as code**. No manual steps, can version control and review changes. 
+- CloudFormation template gives you cost estimates for the resources you’re using, and tags all resources within a given stack for easier cost monitoring. 
+- CloudFormation generates a system diagram for your templates. 
+- Can reuse and share templates (find them online)
+
+The Infrastructure Composer service allows you to visualise the relations between resources. 
+
+![CloudFormation + Infrastructure Composer](cloudformation.png)
+
+
+### 27.1.2. CloudFormation Service Roles
+
+These are IAM roles specifically for  CloudFormation that give the ability to create/update/delete stack resources, even if they don’t have the permission to *use* those resources. 
+
+![CloudFormation Service Role](cloudformation_service_role.png)
+
+
+## 27.2. Simple Email Service (SES)
+
+Fully managed service to **send and receive emails**. 
+
+Provides email statistics (deliveries, opens) and reputation insights (did it get marked as spam). 
+
+There is a choice of IP addresses to send from: shared, dedicated, customer-owned. 
+It supports DomainKeys Identified Mail (DKIM) and Sender Policy Framework (SPF) protocols. 
+
+
+## 27.3. Amazon Pinpoint
+
+Pinpoint is a two-way (inbound and outbound) **marketing communication service**. You can send/receive emails, SMS, push notifications, voice chat, in-app messaging. 
+
+You can segment and personalise messages. 
+
+Replies can be sent to SNS, Kinesis Data Firehose, CloudWatch Logs. Downstream automations can be triggered from here. 
+
+![Amazon Pinpoint](pinpoint.png)
+
+The difference vs SNS or SES is that you don’t have to manually manage each message’s audience, content, delivery schedule, etc. Pinpoint handles all of this. Essentially a *“more managed service” version of SES/SNS*. 
+
+
+## 27.4. System Manager (SSM)
+### 27.4.1. SSM Session Manager
+
+SSM Session Manager allows you to **start a secure shell on your EC2** and on-premises servers.
+No SSH access, bastion hosts, or SSH keys needed, and no port 22 needed, which is better for security.
+
+You can send session log data to S3 or CloudWatch Logs.
+
+
+There are therefore three ways to access an EC2 instance:
+
+1. SSH via port 22. Requires ssh keys to be added on instance creation.
+2. EC2 Instance Connect. Requires ssh keys and port 22 inbound rules allowed.
+3. Using SSM Session Manager
+
+![SSM Session Manager](ssm_session_manager.png)
+
+
+### 27.4.2. Other SSM Commands
+
+Run command: run a script across multiple instances.
+
+![SSM Run Command](ssm_run_command.png)
+
+Patch manager: automate patching, security updates etc. 
+
+![SSM Patch](ssm_patch.png)
+
+Patches can be run on-demand or using maintenance windows.
+
+![SSM Maintenance Window](ssm_maintenance_windows.png)
+
+Common repeated tasks can be specific using an **Automation Runbook**.
+
+![SSM Automation](ssm_automation.png)
 
 
 # References
