--- a/posts/software/aws/aws_saa_notes.qmd
+++ b/posts/software/aws/aws_saa_notes.qmd
@@ -4128,7 +4128,8 @@ These are IAM roles specifically for  CloudFormation that give the ability to cr
 ![CloudFormation Service Role](cloudformation_service_role.png)
 
 
-## 27.2. Simple Email Service (SES)
+## 27.2. Messaging Services
+### 27.2.1. Simple Email Service (SES)
 
 Fully managed service to **send and receive emails**. 
 
@@ -4138,7 +4139,7 @@ There is a choice of IP addresses to send from: shared, dedicated, customer-owne
 It supports DomainKeys Identified Mail (DKIM) and Sender Policy Framework (SPF) protocols. 
 
 
-## 27.3. Amazon Pinpoint
+### 27.2.2. Amazon Pinpoint
 
 Pinpoint is a two-way (inbound and outbound) **marketing communication service**. You can send/receive emails, SMS, push notifications, voice chat, in-app messaging. 
 
@@ -4151,8 +4152,8 @@ Replies can be sent to SNS, Kinesis Data Firehose, CloudWatch Logs. Downstream a
 The difference vs SNS or SES is that you don’t have to manually manage each message’s audience, content, delivery schedule, etc. Pinpoint handles all of this. Essentially a *“more managed service” version of SES/SNS*. 
 
 
-## 27.4. System Manager (SSM)
-### 27.4.1. SSM Session Manager
+## 27.3. System Manager (SSM)
+### 27.3.1. SSM Session Manager
 
 SSM Session Manager allows you to **start a secure shell on your EC2** and on-premises servers.
 No SSH access, bastion hosts, or SSH keys needed, and no port 22 needed, which is better for security.
@@ -4169,7 +4170,7 @@ There are therefore three ways to access an EC2 instance:
 ![SSM Session Manager](ssm_session_manager.png)
 
 
-### 27.4.2. Other SSM Commands
+### 27.3.2. Other SSM Commands
 
 Run command: run a script across multiple instances.
 
@@ -4186,6 +4187,99 @@ Patches can be run on-demand or using maintenance windows.
 Common repeated tasks can be specific using an **Automation Runbook**.
 
 ![SSM Automation](ssm_automation.png)
+
+
+## 27.4. Billing Services
+### 27.4.1. Cost Explorer
+
+A billing service with dashboards to break out costs. 
+
+You can create custom reports, break out costs per account and over different time horizons. 
+
+You can also forecast costs based on your usage in the previous 12 months. 
+
+
+### 27.4.2. Cost Anomaly Detection
+
+Uses ML to identify unusual spends. It sends you a report with root cause analysis. You can also set up alerts. 
+
+
+## 27.5. AWS Outposts 
+
+Hybrid cloud is when you have both on-premises and cloud infrastructure.
+
+**AWS Outposts are “server racks” that offers the same AWS infrastructure**, services, APIs, tools etc.
+This means the on-premises infra is the same as the cloud infra, making it easier to manage both.
+This can also aid in migrating to the cloud.
+
+AWS will come to your physical location and set up **Outpost Racks** with services pre-loaded.
+
+![AWS Outpost](outpost.png)
+
+
+## 27.6. AWS Batch
+
+AWS Batch is a fully-managed service for **batch processing at scale**. Batch will automatically launch EC2 instances and provision the right amount of compute / memory.
+
+Batch job are defined as Docker images and run on ECS.
+
+![AWS Batch](aws_batch.png)
+
+
+Batch is similar in principle to Lambda. The key differences are:
+
+- Time limit: Batch has unlimited runtime whereas Lambda is limited to 15 minutes.
+- Runtime: Batch can use any runtime (as long as its Dockerised) whereas Lambda is more limited.
+- Disk space: Lambda is limited by the temporary instance disk space, whereas Batch can use EBS or EC2 Instance Storage
+- Serverless: Lambda is serverless whereas Batch is not, although the autoscaling is managed by AWS so there is not much difference
+
+
+## 27.7. AppFlow
+
+AppFlow is a fully managed integration service that enables you to securely **transfer data between Software-as-a-Service (SaaS) applications and AWS**.
+
+
+- Sources: Salesforce, SAP, Zendesk, Slack, and ServiceNow
+- Destinations: AWS services like Amazon S3, Amazon Redshift or non-AWS such as SnowFlake and Salesforc
+
+This can be triggered on a schedule, event-driven or manually run on-demand.
+
+You can perform data transforms (filtering, validation) and data is encrypted.
+
+
+![Appflow](appflow.png)
+
+
+
+## 27.8. Amplify
+
+Amplify is a set of tools to help **build full-stack web and mobile applications**.
+
+Think of it like Elastic Beanstalk for web / mobile apps. 
+It is an abstraction over many AWS services in the background that handle storage, auth, processing, etc, so you just manage it all through one portal.
+
+![AWS Amplify](aws_amplify.png)
+
+
+## 27.9. Instance Scheduler
+
+Instance Scheduler is a *solution* (not a service) tha can be deployed through CloudFormation to **automatically start/stop AWS resources** to save costs.
+
+It supports EC2 instances, EC2 Auto Scaling Groups, RDS instances.
+Schedules are managed in a DynamoDB table and use tags on resources to identify what to start/stop, with Lambda performing the stop/start actions.
+
+It supports cross-account and cross-region resources.
+
+
+# 28. White Papers
+
+
+# 29. Exam Preparation
+
+- Refer to the exam syllabus [here](https://aws.amazon.com/certification/certified-solutions-architect-associate/)
+- Proceed by elimination. There are very few trick questions. If a solution seems feasible but highly complicated, it’s probably wrong.
+- Skim-read the white papers.
+- Read the FAQs for a service, e.g. [here](https://aws.amazon.com/vpc/faqs/)
 
 
 # References
